--- a/protocol/develop/E2 - Freeze.yaml
+++ b/protocol/develop/E2 - Freeze.yaml
@@ -10,9 +10,19 @@ metadata:
   description: "To be used to comply with contractual/legal requirements. The whitelist public address will be marked as frozen. However the Freeze action publishes this fact to the public blockchain for transparency. The Contract (referencing the whitelist) will not settle any exchange that involves the frozen Token Owner's public address."
 
 rules:
-  contractFee: 546
-  inputs: [CONTRACT]
-  outputs: [USER, CONTRACT]
+  fee: 546
+  inputs: 
+    - name: Contract
+      label: "Contract Public Address"
+      
+  outputs: 
+    - name: User
+      label: "Target Public Address"
+      description: "Dust limit rule minimum value output of 546"
+
+    - name: Contract
+      label: "Contract Public Address"
+      description: "Change, minimum 546"
 
 fields:
   - name: ActionPrefix
