--- a/protocol/develop/E3 - Thaw.yaml
+++ b/protocol/develop/E3 - Thaw.yaml
@@ -10,9 +10,19 @@ metadata:
   description: "To be used to comply with contractual obligations or legal requirements. The Alleged Offender's tokens will be unfrozen to allow them to resume normal exchange and governance activities."
 
 rules:
-  contractFee: 546
-  inputs: [CONTRACT]
-  outputs: [USER, CONTRACT]
+  fee: 546
+  inputs: 
+    - name: Contract
+      label: "Contract Public Address"
+      
+  outputs: 
+    - name: User
+      label: "Target Public Address"
+      description: "Dust limit rule minimum value output of 546"
+      
+    - name: Contract
+      label: "Contract Public Address"
+      description: "Change, minimum 546"
 
 fields:
   - name: ActionPrefix
