--- a/protocol/develop/R1 - Establishment.yaml
+++ b/protocol/develop/R1 - Establishment.yaml
@@ -10,10 +10,15 @@ metadata:
   description: "Establishes a register. The register is intended to be used primarily for whitelisting. However, other types of registers can be used."
 
 rules:
-  contractFee: 546
-  inputs: [CONTRACT]
-  outputs: [CONTRACT]
-
+  fee: 546
+  inputs: 
+    - name: Register
+      label: "Register's Public Address"
+      
+  outputs: 
+    - name: Register
+      label: "Register's Public Address"
+      
 fields:
   - name: ActionPrefix
     label: "Action Prefix"
