--- a/protocol/develop/G1 - Initiative.yaml
+++ b/protocol/develop/G1 - Initiative.yaml
@@ -20,7 +20,12 @@ rules:
   outputs: 
     - name: Contract
       label: "Contract Public Address"
-    
+      description: "A high value amount is attached to this action to minimize spam and wasting all Token Owners' time.  $100 should be within reach of anyone and even low income earners in the 3rd world can generate support off-chain and gather donations to get to $100.  This is a rough number that will need to be calibrated in the market."
+
+    - name: Contract
+      label: "Contract Public Address"
+      description: "Fund the Result at Vote cutoff"
+
     - name: User
       label: "Token Owner's Public Address"
       description: "Change"
