--- a/protocol/develop/R1 - Establishment.yaml
+++ b/protocol/develop/R1 - Establishment.yaml
@@ -10,9 +10,8 @@ metadata:
   description: "Establishes a register. The register is intended to be used primarily for whitelisting. However, other types of registers can be used."
 
 rules:
-  contractFee: 546
-  inputs: [CONTRACT]
-  outputs: [CONTRACT]
+  inputs: [REGISTER]
+  outputs: [REGISTER]
 
 fields:
   - name: ActionPrefix
