--- a/protocol/develop/R3 - Alteration.yaml
+++ b/protocol/develop/R3 - Alteration.yaml
@@ -10,9 +10,8 @@ metadata:
   description: "A registry entry can be altered."
 
 rules:
-  contractFee: 546
-  inputs: [CONTRACT]
-  outputs: [USER, CONTRACT]
+  inputs: [REGISTER]
+  outputs: [USER, REGISTER]
 
 fields:
   - name: ActionPrefix
