Update R4 - Removal.yaml

--- a/protocol/develop/R4 - Removal.yaml
+++ b/protocol/develop/R4 - Removal.yaml
@@ -10,9 +10,8 @@ metadata:
   description: "Removes a User's public address from the global distributed whitelist."
 
 rules:
-  contractFee: 546
-  inputs: [CONTRACT]
-  outputs: [USER, CONTRACT]
+  inputs: [REGISTER]
+  outputs: [USER, REGISTER]
 
 fields:
   - name: ActionPrefix
