Enhance rules definition

--- a/protocol/develop/R3 - Alteration.yaml
+++ b/protocol/develop/R3 - Alteration.yaml
@@ -10,8 +10,18 @@ metadata:
   description: "A registry entry can be altered."
 
 rules:
-  inputs: [REGISTER]
-  outputs: [USER, REGISTER]
+  fee: 546
+  inputs: 
+    - name: Register
+      label: "Register's Public Address"
+      
+  outputs: 
+    - name: User
+      label: "User's Public Address"
+      description: "Dust limit rule minimum value output of 546"
+
+    - name: Register
+      label: "Register's Public Address"
 
 fields:
   - name: ActionPrefix
