Update R3 - Alteration.yaml

--- a/protocol/develop/R3 - Alteration.yaml
+++ b/protocol/develop/R3 - Alteration.yaml
@@ -10,6 +10,7 @@ metadata:
   description: "A registry entry can be altered."
 
 rules:
+  fee: 546
   inputs: [REGISTER]
   outputs: [USER, REGISTER]
 
