--- a/protocol/develop/G1 - Initiative.yaml
+++ b/protocol/develop/G1 - Initiative.yaml
@@ -12,10 +12,23 @@ metadata:
   rejection: Rejection
 
 rules:
-  contractFee: 4000
-  inputs: [USER]
-  outputs: [CONTRACT, USER]
-  required: [ProposalDescription, VoteOptions]
+  fee: 4000
+  inputs: 
+    - name: User
+      label: "Token Owner's Public Address"
+     
+  outputs: 
+    - name: Contract
+      label: "Contract Public Address"
+      description: "A high value amount is attached to this action to minimize spam and wasting all Token Owners' time.  $100 should be within reach of anyone and even low income earners in the 3rd world can generate support off-chain and gather donations to get to $100.  This is a rough number that will need to be calibrated in the market."
+
+    - name: Contract
+      label: "Contract Public Address"
+      description: "Fund the Result at Vote cutoff"
+
+    - name: User
+      label: "Token Owner's Public Address"
+      description: "Change"
 
 fields:
   - name: ActionPrefix
@@ -53,6 +66,7 @@ fields:
     description: "Each byte allows for a different vote option.  Typical votes will likely be multiple choice or Y/N. Vote instances are identified by the Tx-ID. AB000000000 would be chosen for Y/N (binary) type votes."
     type: STRING
     size: 15
+    required: true
 
   - name: VoteMax
     label: "Vote Max"
@@ -71,6 +85,7 @@ fields:
     description: "Description of the vote"
     type: STRING
     size: 82
+    required: true
 
   - name: ProposalDocumentHash
     label: "Proposal Document Hash"
