--- a/protocol/develop/M1 - Message.yaml
+++ b/protocol/develop/M1 - Message.yaml
@@ -10,9 +10,19 @@ metadata:
   description: "The message action is a general purpose communication action. 'Twitter/sms' for Issuers/Investors/Users. The message txn can also be used for passing partially signed txns on-chain, establishing private communication channels including receipting, invoices, PO, and private offers/bids. The messages are broken down by type for easy filtering in the a user’s wallet. The Message Types are listed in the Message Types table."
 
 rules:
-  contractFee: 4000
-  inputs: [SENDER]
-  outputs: [RECEIVER, SENDER]
+  fee: 4000
+  inputs: 
+    - name: Sender
+      label: "Msg Sender's Public Address"
+      
+  outputs: 
+    - name: Receiver
+      label: "Msg Receiver's Public Address"
+      description: "Dust limit rule minimum value output of 546"
+      
+    - name: Sender
+      label: "Msg Sender's Public Address"
+      description: "Change"
 
 fields:
   - name: ActionPrefix
